--- a/backend/.env
+++ b/backend/.env
@@ -1,4 +1,4 @@
 PORT=5000
-MONGO_URI="mongodb+srv://lahari:lahari@cluster0.lpotd.mongodb.net/hackathon?retryWrites=true&w=majority&appName=Cluster0"
+MONGO_URI="mongodb+srv://lahari:lahari@cluster0.lpotd.mongodb.net/eventspace?retryWrites=true&w=majority&appName=Cluster0"
 JWT_SECRET="eventspace"
 
